# fastapi-jwt-auth

./: .gitignore  pyproject.toml
fastapi_jwt_auth/: auth_jwt.py  config.py
tests/: test_create_token.py
