[tool.poetry]
name = "fastapi_jwt_auth"
version = "0.7.0"
description = ""
authors = ["Atsushi Fukuda"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = ">=0.61.0"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]
cryptography = ">=3.0,<36.0.0"
uvicorn = ">=0.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "2.10.0"
coveralls = "2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
